<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity"
        android:background="@drawable/gradient_background"
        tools:layout_editor_absoluteY="81dp">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionGroup="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="lollipop">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                   style="@style/FrameImageDetail"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/click_to_enlarge_image"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                    <ImageView
                        android:id="@+id/iv_poster_detail"
                        android:layout_width="220dp"
                        android:layout_height="331dp"
                        android:layout_margin="16dp"
                        android:onClick="toZoom"
                        android:contentDescription="@string/image_poster" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/LabelDetailRed"
                        android:text="@string/title"
                        android:textColor="@color/gold"
                        />

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TextDetailBoldTextLarge"
                        android:textColor="@color/white"
                        />

                    <TextView
                         style="@style/LabelDetailRed"
                        android:text="@string/plot_synopsis"
                        android:textColor="@color/gold"
                        />

                    <TextView
                        android:id="@+id/tv_plot"
                        style="@style/TextDetail"
                        android:textColor="@color/white"
                        />

                    <TextView
                        style="@style/LabelDetailRed"
                        android:text="@string/user_rating"
                        android:textColor="@color/gold"
                        />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:textColor="@color/white"
                        style="@style/TextDetailBoldTextLarge" />

                    <TextView
                        style="@style/LabelDetailRed"
                        android:textColor="@color/gold"
                        android:text="@string/release_date"/>

                    <TextView
                        android:id="@+id/tv_release"
                        android:textColor="@color/white"
                        style="@style/TextDetailBoldTextLarge" />

                    <TextView
                        style="@style/LabelDetailRed"
                        android:textColor="@color/gold"
                        android:text="@string/trailers"/>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp" />

                    <TextView
                        android:id="@+id/tv_adapter_no_data_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/no_trailers"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <TextView
                         style="@style/LabelDetailRed"
                         android:textColor="@color/gold"
                        android:text="@string/reviews" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_reviews"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp" />

                    <TextView
                        android:id="@+id/tv_adapter_no_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/no_reviews"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="saveDeleteData"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>